<resources>
    <string name="app_name">Foody</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes </string>
    <string name="favorite_recipes_fragment">Favorite</string>
    <string name="food_joke">Food Story</string>
    <string name="recipes">recipes</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="marinage">Marinage</string>
    <string name="finger_food">Finger Food</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="detail_image">Detail Image</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="ingredient">Ingredient</string>
    <string name="name">Name</string>
    <string name="_100">100</string>
    <string name="grams">Grams</string>
    <string name="consistency">Consistency</string>
    <string name="original">Original</string>
    <string name="save_to_favorite">Save to favorite</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="number_of_likes">Number of Likes</string>
    <string name="is_vegan">is vegan</string>
    <string name="time">Time</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="share">Share</string>
</resources>