<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favoriteEntity"
            type="com.app.foody.data.network.response.FavoriteEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favoriteRecipesRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/favoriteCardViewRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/favoriteIvRecipe"
                    loadImageFromUrl="@{favoriteEntity.result.image}"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/recipe_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/favoriteTvRecipeName"
                    parseHtml="@{favoriteEntity.result.summary}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/darker"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/favoriteIvRecipe"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/favoriteTvRecipeDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    parseHtml="@{favoriteEntity.result.summary}"
                    android:textColor="@color/darkGray"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteTvRecipeName"
                    app:layout_constraintStart_toStartOf="@+id/favoriteTvRecipeName"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteTvRecipeName" />

                <ImageView
                    android:id="@+id/favoriteIvHeart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/number_of_likes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteTvHeartNumber"
                    app:layout_constraintStart_toStartOf="@+id/favoriteTvHeartNumber"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteTvRecipeDescription"
                    app:srcCompat="@drawable/ic_heart"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/favoriteTvHeartNumber"
                    setNumberOfLikes="@{favoriteEntity.result.aggregateLikes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toStartOf="@+id/favoriteTvRecipeDescription"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteIvHeart" />

                <ImageView
                    android:id="@+id/favoriteIvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/time"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteTvTime"
                    app:layout_constraintStart_toStartOf="@+id/favoriteTvTime"
                    app:layout_constraintTop_toTopOf="@+id/favoriteIvHeart"
                    app:srcCompat="@drawable/ic_time"
                    app:tint="@color/yellow" />

                <TextView
                    android:id="@+id/favoriteTvTime"
                    setNumberOfMinutes="@{favoriteEntity.result.readyInMinutes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/_100"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    app:layout_constraintStart_toEndOf="@+id/favoriteTvHeartNumber"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteIvTime" />

                <ImageView
                    android:id="@+id/favoriteIvIsVegan"
                    setVeganColor="@{favoriteEntity.result.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/is_vegan"
                    app:layout_constraintEnd_toEndOf="@+id/favoriteTvIsVegan"
                    app:layout_constraintStart_toStartOf="@+id/favoriteTvIsVegan"
                    app:layout_constraintTop_toTopOf="@+id/favoriteIvTime"
                    app:srcCompat="@drawable/ic_leaf" />

                <TextView
                    android:id="@+id/favoriteTvIsVegan"
                    setVeganColor="@{favoriteEntity.result.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/vegan"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/favoriteTvTime"
                    app:layout_constraintTop_toBottomOf="@+id/favoriteIvIsVegan" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>